// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Audit log orders disaggregations correctly 1`] = `
<div>
  <h4
    className="disagg-type__title text-small"
  >
    Type of Leader
  </h4>
  <div
    className="change__field"
  >
    <span
      className="change__field__name"
    >
      Value One
      :
    </span>
     
    <span
      className="change__field__value"
    >
      –
    </span>
  </div>
  <div
    className="change__field"
  >
    <span
      className="change__field__name"
    >
      Value Two
      :
    </span>
     
    <span
      className="change__field__value"
    >
      –
    </span>
  </div>
  <div
    className="change__field"
  >
    <span
      className="change__field__name"
    >
      Value Three
      :
    </span>
     
    <span
      className="change__field__value"
    >
      –
    </span>
  </div>
  <div
    className="change__field"
  >
    <span
      className="change__field__name"
    >
      Value Four
      :
    </span>
     
    <span
      className="change__field__value"
    >
      –
    </span>
  </div>
</div>
`;

exports[`Audit log orders disaggregations correctly 2`] = `
<div>
  <h4
    className="disagg-type__title text-small"
  >
    Type of Leader
  </h4>
  <div
    className="change__field"
  >
    <span
      className="change__field__name"
    >
      Value Four
      :
    </span>
     
    <span
      className="change__field__value"
    >
      –
    </span>
  </div>
  <div
    className="change__field"
  >
    <span
      className="change__field__name"
    >
      Value Two
      :
    </span>
     
    <span
      className="change__field__value"
    >
      –
    </span>
  </div>
  <div
    className="change__field"
  >
    <span
      className="change__field__name"
    >
      Value Three
      :
    </span>
     
    <span
      className="change__field__value"
    >
      –
    </span>
  </div>
  <div
    className="change__field"
  >
    <span
      className="change__field__name"
    >
      Value One
      :
    </span>
     
    <span
      className="change__field__value"
    >
      –
    </span>
  </div>
</div>
`;

exports[`Audit log orders disaggregations types correctly 1`] = `
<div
  className="changelog__change__targets"
>
  <div>
    <h4
      className="disagg-type__title text-small"
    >
      Another Disaggregation
    </h4>
    <div
      className="change__field"
    >
      <span
        className="change__field__name"
      >
        Type Two Value One
        :
      </span>
       
      <span
        className="change__field__value"
      >
        18.00
      </span>
    </div>
  </div>
  <div>
    <h4
      className="disagg-type__title text-small"
    >
      Type of Leader
    </h4>
    <div
      className="change__field"
    >
      <span
        className="change__field__name"
      >
        Type One Value Two
        :
      </span>
       
      <span
        className="change__field__value"
      >
        23.00
      </span>
    </div>
    <div
      className="change__field"
    >
      <span
        className="change__field__name"
      >
        Type One Value One
        :
      </span>
       
      <span
        className="change__field__value"
      >
        2.00
      </span>
    </div>
  </div>
</div>
`;
